--- a/style.css
+++ b/style.css
@@ -5,3 +5,23 @@
 body {
   padding: 0 30px 0 30px;
 }
+
+header{
+  height: 100px;
+  bottom-border: 1px solid #ccc;
+}
+
+header nav{
+  float: right;
+}
+
+nav ul{
+  padding: 0;
+  margin: 40px 0 0 0;
+}
+
+nav ul li {
+  display: inline;
+  margin-right: 10px;
+}
+
