--- a/style.css
+++ b/style.css
@@ -25,3 +25,17 @@ nav ul li {
   margin-right: 10px;
 }
 
+nav a {
+  text-decoration: none;
+  color: #007bff;
+}
+
+header h3 {
+  float: left;
+  font-size: 30px;
+}
+
+header h3 a{
+  text-decoration: none;
+  color: #868e96;
+}
