--- a/style.css
+++ b/style.css
@@ -25,9 +25,10 @@ nav ul li {
   margin-right: 10px;
 }
 
-nav a {
+nav a{
   text-decoration: none;
   color: #007bff;
+  font-size: 18px;
 }
 
 header h3 {
